# minmea

./: .gitignore  CMakeLists.txt  Makefile  MinMEAConfig.cmake.in
examples/: example.c
include/minmea/: minmea.h  windows.h
src/: minmea.c
test/: tests.c
